{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Move",
            "id": "ce396578-fddd-4ee9-a10d-5438bba78c8c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1e7cdb9b-8a7f-4236-a8b4-7d8e536f84a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "86e63860-15de-4286-a8be-9c1955ee3aed",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2a57adaf-dd1f-4ae7-a0d3-d183280b2a83",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ff94997e-1e1b-4fbb-8ad4-56efaa3375a4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a40e2096-161b-42b4-a8f1-3c4f3c821053",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b0fa9a71-0b1f-4935-b7b2-53743dda0724",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ffcf1b52-ab77-4300-a865-e443a82184e4",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Touch",
            "id": "400feaf3-5fb3-449c-b827-f8a1c2561cf3",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "2da8c74e-1208-4c13-81d2-8c48d123b810",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "b7f48e8c-e10a-4849-ac37-d2ce5785a000",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5dffc596-0aa8-49b0-8173-7571e9fdd63a",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5cb162d-b0c8-476f-9b00-945acfbf4c7c",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}